<resources>
    <string name="app_name">Social</string>
    <string name="title_activity_firebase_u_i">FirebaseUIActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="signup">SignUp</string>
    <string name="password">Password</string>
    <string name="passwordTitle">Password :</string>
    <string name="username">Username</string>
    <string name="usernametitle">Username :</string>
    <string name="signin">SignIn</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="validate">Verify Email Address</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home"> Home </string>
    <string name="USER_DETAILS">USER_DETAILS</string>
    <string name="resend">You can resent verification email in 10seconds</string>
    <string name="id">ID</string>
    <string name="numOfLikes">52 likes</string>
    <string name="imageTitle">Aloo corn frankie</string>
    <string name="Auth">Auth</string>
    <string name="posts">Posts</string>
    <string name="_32">0</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="username_search">search username</string>
    <string name="title_activity_searchable">SearchableActivity</string>
    <string name="search">search</string>
    <string name="plus">plus</string>
    <string name="sign_out">sign out</string>
    <string name="resultsForSearch">search results</string>
    <string name="upload">Upload Image</string>
    <string name="available">Available</string>
    <string name="DOCUMENT_KEY">document</string>
    <string name="sent_verification_email">Sent Verification Email</string>
    <string name="status">status</string>
    <string name="refresh">refresh</string>
    <string name="share">Share</string>
    <string name="avail">Available</string>
    <string name="offline">Offline</string>
    <string name="resendEval">Re-sent verification Email</string>
    <string name="profile_image">profile image</string>
    <string name="like_icon">like icon</string>
    <string name="is_user_avalible">is User avalible</string>
    <string name="LOGGEDIN_false">LOGGEDIN successfully updated!</string>
    <string name="widget">Widget for socail app</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="preview_image_and_click_on_share_button">preview Image and click on share button</string>
</resources>