<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:outlineSpotShadowColor="@color/black"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/status"
        style="@style/userNamePasswordStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status"
        app:layout_constraintBottom_toTopOf="@id/Username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/Username"
        style="@style/userNamePasswordStyle"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:gravity="center"
        android:text="@string/usernametitle"
        app:layout_constraintBottom_toTopOf="@id/Password"
        app:layout_constraintRight_toLeftOf="@id/Username_editText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent="0.3" />

    <EditText
        android:id="@+id/Username_editText"
        style="@style/userNamePasswordStyle"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@id/Password_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/Username"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent="0.7" />

    <TextView
        android:id="@+id/Password"
        style="@style/userNamePasswordStyle"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:gravity="center"
        android:text="@string/passwordTitle"
        app:layout_constraintBottom_toTopOf="@id/SignIn"
        app:layout_constraintRight_toLeftOf="@id/Password_editText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Username"
        app:layout_constraintWidth_percent="0.3" />

    <EditText
        android:id="@+id/Password_editText"
        style="@style/userNamePasswordStyle"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/SignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/Password"
        app:layout_constraintTop_toBottomOf="@id/Username_editText"
        app:layout_constraintWidth_percent="0.7" />

    <Button
        android:id="@+id/SignUp"
        style="@style/userNamePasswordBtnStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin8"
        android:text="@string/signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/SignIn"
        app:layout_constraintTop_toBottomOf="@id/Password_editText" />

    <Button
        android:id="@+id/SignIn"
        style="@style/userNamePasswordBtnStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/SignUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Password" />


</androidx.constraintlayout.widget.ConstraintLayout>