<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

   <!-- <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/User_image"
        android:layout_width="@dimen/zerodp"
        android:layout_height="@dimen/zerodp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toLeftOf="@id/User_name"
        app:srcCompat="@drawable/socail"
        android:layout_margin="@dimen/margin8"
        app:strokeColor="@color/black"
        app:shapeAppearance="@style/circleImageView"
        app:layout_constraintWidth_percent="0.2"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintBottom_toTopOf="@id/User_postImage"
        android:scaleType="centerCrop"
        android:background="@color/black"/>-->

    <androidx.cardview.widget.CardView
        android:id="@+id/User_image"
        android:layout_width="@dimen/zerodp"
        android:layout_height="@dimen/zerodp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/margin16"
        app:cardCornerRadius="50dp"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintWidth_percent="0.2"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/User_postImage">

        <ImageView
            android:id="@+id/roundedimage_User_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="center"
            android:src="@drawable/socail"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/User_name"
        android:layout_width="@dimen/zerodp"
        android:layout_height="@dimen/zerodp"
        android:layout_margin="@dimen/margin8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintLeft_toRightOf="@id/User_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/User_postImage"
        app:layout_constraintWidth_percent="0.7 "
        android:text="@string/usernametitle"
        style="@style/homeScreenText"/>

    <ImageView
        android:id="@+id/User_postImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zerodp"
        android:layout_margin="@dimen/margin8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/User_name"
        app:layout_constraintBottom_toTopOf="@id/User_loveIcon"
        android:src="@drawable/socail"/>

    <ImageView
        android:id="@+id/User_loveIcon"
        android:layout_width="@dimen/zerodp"
        android:layout_height="@dimen/zerodp"
        android:layout_margin="@dimen/margin8"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintWidth_percent="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/User_postImage"
        android:src="@drawable/heart_fill1"/>

    <TextView
        android:id="@+id/num_loves"
        style="@style/homeScreenText"
        android:layout_width="@dimen/zerodp"
        android:layout_height="@dimen/zerodp"
        android:layout_margin="@dimen/margin8"
        android:text="@string/numOfLikes"
        app:layout_constraintTop_toBottomOf="@id/User_postImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintLeft_toRightOf="@id/User_loveIcon"
        app:layout_constraintWidth_percent="0.7 " />

    <TextView
        style="@style/homeScreenText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zerodp"
        android:text="@string/imageTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/num_loves" />
</androidx.constraintlayout.widget.ConstraintLayout>